--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Helloooo Babyyyy!!!</h1>
-<p>This website is hosted free of cost.....</p>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>For Cute Gudiya</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Font Awesome -->
+    <link href="Content/fontawesome-all.min.css" rel="stylesheet" />
+    <style type="text/css">
+        body, html {
+            height: 100%;
+        }
+    </style>
+</head>
+<body style="background-color:#d2f7e4;">
+    <div class="container d-flex h-100">
+        <div class="row align-self-center w-100">
+            <div class="col-12 mx-auto">
+                <div class="">
+                    <h1 class="display-4"><i class="fa fa-heart"></i>
+			Dear Gudiya!!
+			</h1>
+                    <p class="lead">This webpage is hosted free of cost...</p>                   
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
