--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="author" content="" />
     <title>For Cute Gudiya</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 
     <!-- Font Awesome -->
-    <link href="Content/fontawesome-all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" />
+    <!-- Custom styles for this template -->
     <style type="text/css">
         body, html {
             height: 100%;
